--- a/CSS/variaveis.css
+++ b/CSS/variaveis.css
@@ -8,4 +8,7 @@
     --cor-laranja: #ff9021;
     --cor-laranja-claro: #e8af35;
     --cor-roxo: #9156e7;
+    --cor-velocidade: rgb(64,212,201);
+    --cor-simplicidade: #325b9c;
+    --cor-qualidade: #0093fd;
 }
